service: product service done
