# services/inventory/src/controllers/getInventoryById.ts
@@ -24,4 +24,46 @@ const getInventoryById = async (
   }
 };
 
-export default getInventoryById;
+const getLastHistoryByProductId = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { productId } = req.params;
+    const data = await new InventoryServices().getInventoryDetailsByProductId(
+      productId
+    );
+    return res.status(200).json({
+      code: 200,
+      message: "Data Retrieve Successfully",
+      data,
+    });
+  } catch (error) {
+    console.log("Error throw while get inventory by Id:" + error);
+    next(error);
+  }
+};
+
+const getInventoryByProductId = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { productId } = req.params;
+    const data = await new InventoryServices().getInventoryDetailsByProductId(
+      productId
+    );
+    return res.status(200).json({
+      code: 200,
+      message: "Data Retrieve Successfully",
+      data,
+    });
+  } catch (error) {
+    console.log("Error throw while get inventory by Id:" + error);
+    next(error);
+  }
+};
+
+export { getInventoryById, getLastHistoryByProductId, getInventoryByProductId };
