# services/inventory/src/routes/index.ts
@@ -3,17 +3,36 @@ import {
   getInventoryById,
   getInventoryByIdWithDetails,
   updateInventory,
+  updateInventoryByProductId,
 } from "@/controllers";
+import {
+  getInventoryByProductId,
+  getLastHistoryByProductId,
+} from "@/controllers/getInventoryById";
 import { methodNotAllowed } from "@/middlewares";
 import express from "express";
 const router = express.Router();
 
+router.put(
+  "/inventories/product/:productId",
+  methodNotAllowed("put"),
+  updateInventoryByProductId
+);
+router.get(
+  "/inventories/last-history/:productId",
+  methodNotAllowed("get"),
+  getLastHistoryByProductId
+);
+router.get(
+  "/inventories/product/:productId",
+  methodNotAllowed("get"),
+  getInventoryByProductId
+);
 router.get(
   "/inventories/:inventoryId/histories",
   methodNotAllowed("get"),
   getInventoryByIdWithDetails
 );
-router.post("/inventories", methodNotAllowed("post"), createInventory);
 router.put(
   "/inventories/:inventoryId",
   methodNotAllowed("put"),
@@ -24,5 +43,11 @@ router.get(
   methodNotAllowed("get"),
   getInventoryById
 );
+router.get(
+  "/inventories/:inventoryId",
+  methodNotAllowed("get"),
+  getInventoryById
+);
+router.post("/inventories", methodNotAllowed("post"), createInventory);
 
 export default router;
