# services/product/src/controllers/index.ts
@@ -1,0 +1,5 @@
+export { default as createProduct } from "./createProduct";
+export { default as updateProduct } from "./updateProduct";
+export { default as getProductByIdWithDetails } from "./getProductWithInventoryDetails";
+export { default as getProductById } from "./getProductById";
+export { default as deleteProduct } from "./deleteProduct";
